--- a/giftlink-backend/.env
+++ b/giftlink-backend/.env
@@ -1,3 +1,2 @@
-JWT_SECRET=6Ej5VGpsOD92
-MONGO_URI=mongodb+srv://root:g4B30We7ElIBjHi5qUGZraGL@cluster0.mongodb.net/giftlink?retryWrites=true&w=majority
+MONGO_URI=mongodb://root:g4B30We7ElIBjHi5qUGZraGL@172.21.133.190:27017/giftlink?authSource=admin
 PORT=3060
